--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
         with:
           context: ./build/node-checker/
           file: ./build/node-checker/Dockerfile
-          platforms: linux/amd64,linux/arm64/v8,linux/ppc64le,linux/s390x,linux/386,linux/arm/v7,linux/arm/v6
+          platforms: linux/amd64,linux/arm64/v8
           push: true
           tags: blijblijblij/node-checker:latest-${{ steps.define_env.outputs.github-sha-short }}
       # - 
