--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,47 +11,67 @@ jobs:
       - 
         name: Checkout
         uses: actions/checkout@v2
-      -
-        name: Define ENV VARS
-        id: define_env
-        run:  echo "::set-output name=github-sha-short::$(echo $GITHUB_SHA | cut -c 1-7)"
-      -
-        name: Pull template
-        uses: docker://openfaas/faas-cli:latest-root
+      - name: OpenFaaS build and push
+        uses: mrsimpson/action-openfaas-build@master
         with:
-          args: template store pull ruby
-      - 
-        name: Run shrinkwrap build
-        uses: docker://openfaas/faas-cli:latest-root
-        with:
-          args: build -f node-checker.yml --shrinkwrap
-      # -
-      #   name: Login to OpenFaaS Gateway
-      #   uses: docker://openfaas/faas-cli:latest-root
-      #   with:
-      #     args: login -p ${{ secrets.OPENFAAS_GATEWAY_PASSWD }} \
-      #                 -g ${{ secrets.OPENFAAS_GATEWAY }}
-      -
-        name: Login to DockerHub
-        if: success()
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - 
-        name: Build and Push the OpenFaaS function
-        uses: docker/build-push-action@v2
-        with:
-          context: ./build/node-checker/
-          file: ./build/node-checker/Dockerfile
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: blijblijblij/node-checker:latest-${{ steps.define_env.outputs.github-sha-short }}
-      # - 
-      #   name: Deploy the function
-      #   uses: docker://openfaas/faas-cli:latest-root
-      #   with:
-      #     args: deploy -f node-checker.yml --tag sha 
+          # The OpenFaaS function definition file
+          stack-file: stack.yml
+          # Your docker username with push authorization
+          docker-username: ${{ secrets.DOCKER_USERNAME }}
+          # Your docker username with push authorization
+          docker-password: ${{ secrets.DOCKER_PASSWORD }}
+          # the platform abbreviations to build for, e. g. linux/amd64,linux/arm/v7
+          platforms: linux/amd64,linux/arm/v7
+          # Whether the built image shall be deployed (false=no, true=yes)
+          deploy: ${{ github.ref == 'refs/heads/develop' }}
+          # OpenFaaS gateway URL (http(s)://my-public-gateway.tld)
+          openfaas-gateway: ${{ secrets.OPENFAAS_GATEWAY }}
+          # User for authenticating at OpenFaaS gateway
+          openfaas-username: ${{ secrets.OPENFAAS_USERNAME }}
+          # Password for authenticating at OpenFaaS gateway
+          openfaas-password: ${{ secrets.OPENFAAS_PASSWORD }}
+
+#       -
+#         name: Define ENV VARS
+#         id: define_env
+#         run:  echo "::set-output name=github-sha-short::$(echo $GITHUB_SHA | cut -c 1-7)"
+#       -
+#         name: Pull template
+#         uses: docker://openfaas/faas-cli:latest-root
+#         with:
+#           args: template store pull ruby
+#       - 
+#         name: Run shrinkwrap build
+#         uses: docker://openfaas/faas-cli:latest-root
+#         with:
+#           args: build -f node-checker.yml --shrinkwrap
+#       # -
+#       #   name: Login to OpenFaaS Gateway
+#       #   uses: docker://openfaas/faas-cli:latest-root
+#       #   with:
+#       #     args: login -p ${{ secrets.OPENFAAS_GATEWAY_PASSWD }} \
+#       #                 -g ${{ secrets.OPENFAAS_GATEWAY }}
+#       -
+#         name: Login to DockerHub
+#         if: success()
+#         uses: docker/login-action@v1
+#         with:
+#           username: ${{ secrets.DOCKER_USERNAME }}
+#           password: ${{ secrets.DOCKER_PASSWORD }}
+#       -
+#         name: Set up Docker Buildx
+#         uses: docker/setup-buildx-action@v1
+#       - 
+#         name: Build and Push the OpenFaaS function
+#         uses: docker/build-push-action@v2
+#         with:
+#           context: ./build/node-checker/
+#           file: ./build/node-checker/Dockerfile
+#           platforms: linux/amd64,linux/arm64
+#           push: true
+#           tags: blijblijblij/node-checker:latest-${{ steps.define_env.outputs.github-sha-short }}
+#       # - 
+#       #   name: Deploy the function
+#       #   uses: docker://openfaas/faas-cli:latest-root
+#       #   with:
+#       #     args: deploy -f node-checker.yml --tag sha 
