--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,33 +25,39 @@ jobs:
           # Whether the built image shall be deployed (false=no, true=yes)
           # deploy: ${{ github.ref == 'refs/heads/develop' }}
           # OpenFaaS gateway URL (http(s)://my-public-gateway.tld)
-          # openfaas-gateway: ${{ secrets.OPENFAAS_GATEWAY }}
+          openfaas-gateway: ${{ secrets.OPENFAAS_GATEWAY }}
           # User for authenticating at OpenFaaS gateway
-          # openfaas-username: ${{ secrets.OPENFAAS_USERNAME }}
+          openfaas-username: ${{ secrets.OPENFAAS_USERNAME }}
           # Password for authenticating at OpenFaaS gateway
-          # openfaas-password: ${{ secrets.OPENFAAS_PASSWORD }}
+          openfaas-password: ${{ secrets.OPENFAAS_PASSWORD }}
 
-#       -
-#         name: Define ENV VARS
-#         id: define_env
-#         run:  echo "::set-output name=github-sha-short::$(echo $GITHUB_SHA | cut -c 1-7)"
-#       -
-#         name: Pull template
-#         uses: docker://openfaas/faas-cli:latest-root
-#         with:
-#           args: template store pull ruby
-#       - 
-#         name: Run shrinkwrap build
-#         uses: docker://openfaas/faas-cli:latest-root
-#         with:
-#           args: build -f node-checker.yml --shrinkwrap
-#       # -
-#       #   name: Login to OpenFaaS Gateway
-#       #   uses: docker://openfaas/faas-cli:latest-root
-#       #   with:
-#       #     args: login -p ${{ secrets.OPENFAAS_GATEWAY_PASSWD }} \
-#       #                 -g ${{ secrets.OPENFAAS_GATEWAY }}
-#       -
+       -
+         name: Define ENV VARS
+         id: define_env
+         run:  echo "::set-output name=github-sha-short::$(echo $GITHUB_SHA | cut -c 1-7)"
+       -
+         name: Pull template
+         uses: docker://openfaas/faas-cli:latest-root
+         with:
+           args: template store pull ruby
+       - 
+         name: Run shrinkwrap build
+         uses: docker://openfaas/faas-cli:latest-root
+         with:
+           args: build -f node-checker.yml --shrinkwrap
+       -
+        name: Login to OpenFaaS Gateway
+        uses: docker://openfaas/faas-cli:latest-root
+        with:
+          args: login -u ${{ secrets.OPENFAAS_USERNAME}} \
+                      -p ${{ secrets.OPENFAAS_PASSWORD }} \
+                      -g ${{ secrets.OPENFAAS_GATEWAY }}
+       - 
+        name: Deploy the function
+        uses: docker://openfaas/faas-cli:latest-root
+        with:
+          args: deploy -f node-checker.yml --tag sha 
+       # -
 #         name: Login to DockerHub
 #         if: success()
 #         uses: docker/login-action@v1
@@ -70,8 +76,3 @@ jobs:
 #           platforms: linux/amd64,linux/arm64
 #           push: true
 #           tags: blijblijblij/node-checker:latest-${{ steps.define_env.outputs.github-sha-short }}
-#       # - 
-#       #   name: Deploy the function
-#       #   uses: docker://openfaas/faas-cli:latest-root
-#       #   with:
-#       #     args: deploy -f node-checker.yml --tag sha 
