--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,8 @@ jobs:
       - 
         name: Checkout
         uses: actions/checkout@v2
-      - name: OpenFaaS build and push
+      - 
+        name: OpenFaaS build and push
         uses: mrsimpson/action-openfaas-build@master
         with:
           # The OpenFaaS function definition file
@@ -56,22 +57,3 @@ jobs:
         uses: docker://openfaas/faas-cli:latest-root
         with:
           args: deploy -f node-checker.yml --tag sha 
-# -
-#         name: Login to DockerHub
-#         if: success()
-#         uses: docker/login-action@v1
-#         with:
-#           username: ${{ secrets.DOCKER_USERNAME }}
-#           password: ${{ secrets.DOCKER_PASSWORD }}
-#       -
-#         name: Set up Docker Buildx
-#         uses: docker/setup-buildx-action@v1
-#       - 
-#         name: Build and Push the OpenFaaS function
-#         uses: docker/build-push-action@v2
-#         with:
-#           context: ./build/node-checker/
-#           file: ./build/node-checker/Dockerfile
-#           platforms: linux/amd64,linux/arm64
-#           push: true
-#           tags: blijblijblij/node-checker:latest-${{ steps.define_env.outputs.github-sha-short }}
