--- a/node-checker.yml
+++ b/node-checker.yml
@@ -1,7 +1,7 @@
 version: 1.0
 provider:
   name: openfaas
-  gateway: http://127.0.0.1:8080
+  gateway: https://faas.blijblijblij.com
 functions:
   node-checker:
     lang: ruby
