--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
         uses: docker://openfaas/faas-cli:latest-root
         with:
           # args: template store pull ruby-http
-          args: template pull https://github.com/openfaas-incubator/ruby-http
+          args: faas template pull https://github.com/openfaas-incubator/ruby-http
       -
         name: Run shrinkwrap build
         uses: docker://openfaas/faas-cli:latest-root
