--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,24 @@ jobs:
           args: login -u ${{ secrets.OPENFAAS_USERNAME}} \
                       -p ${{ secrets.OPENFAAS_PASSWORD }} \
                       -g ${{ secrets.OPENFAAS_GATEWAY }}
+      -
+        name: Login to DockerHub
+        if: success()
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - 
+        name: Build and Push the OpenFaaS function
+        uses: docker/build-push-action@v2
+        with:
+          context: ./build/homepage/
+          file: ./build/homepage/Dockerfile
+          push: true
+          tags: blijblijblij/homepage:latest-${{ steps.define_env.outputs.github-sha-short }}
       - 
         name: Deploy the function
         uses: docker://openfaas/faas-cli:latest-root
