--- a/homepage.yml
+++ b/homepage.yml
@@ -7,5 +7,10 @@ functions:
     lang: ruby-http
     handler: ./homepage
     image: blijblijblij/homepage:latest
-    build_options:
-      - dev
+    build_options: 
+    - name: dev
+      packages:
+        - make
+        - automake
+        - gcc
+        - build-essentials
