--- a/homepage.yml
+++ b/homepage.yml
@@ -7,5 +7,5 @@ functions:
     lang: ruby-http
     handler: ./homepage
     image: blijblijblij/homepage:latest
-build_options:
-  - build-essential
+    build_options:
+    - dev
