--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,8 +53,8 @@ jobs:
           file: ./build/homepage/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-#          build-args: |
-#            ADDITIONAL_PACKAGE=build-essential
+          build-args: |
+            ADDITIONAL_PACKAGE=build-essential
           tags: |
             blijblijblij/homepage:latest-${{ steps.define_env.outputs.github-sha-short }}
             blijblijblij/homepage:latest
